# Revelade-Revolution

./: CMakeLists.txt  Makefile  RR_Game.bat  changelog.txt  contentlicenses.txt  fullcredits.txt  license.txt  readme.txt  reveladerevolution.bat  reveladerevolution_unix  server.bat  todo.tsk
RR_Master/engine/: command.cpp  master.cpp
RR_Master/shared/: cube.h  iengine.h  igame.h
RR_Master/vcpp/: cube.vcxproj  cube.vcxproj.filters
bin_unix/: tess_client
data/: botnames.cfg  brush.cfg  buy.cfg  clanwar.cfg  default_map_models.cfg  default_map_settings.cfg  defaults.cfg  font.cfg  game_fps.cfg  glsl.cfg  joystick.cfg  keymap.cfg  menus.cfg  names.cfg  qc.cfg  radio.cfg  screenshot.cfg  sounds.cfg  stats.cfg  stdedit.cfg  stdlib.cfg  stdshader.cfg  tips.cfg
data/fonts/: 7thService.cfg  add_electric_city.cfg  foo.cfg  pipe_dream.cfg
data/hud/: digit_font.cfg  digital_font.cfg
data/icons/privs/: readme.txt
data/lang/: en.cfg  it.cfg  nl.cfg
data/menus/: clanwar.cfg  gamesetup.cfg  main.cfg  master.cfg  movie.cfg  multiplayer.cfg  postfx.cfg  radio.cfg  recorder.cfg  serverbrowser.cfg  stats.cfg
data/menus/customize/: class.cfg  crosshair.cfg  customize.cfg  playermodel.cfg
data/menus/editing/: blend.cfg  editing.cfg  entities.cfg  fileeditor.cfg  light.cfg  materials.cfg  particles.cfg  quickedit.cfg
data/menus/options/: advanced.cfg  autoexec.cfg  console.cfg  defaultmap.cfg  game.cfg  graphics.cfg  input.cfg  interface.cfg  ironsight.cfg  music.cfg  options.cfg  resolution.cfg  sound.cfg  video.cfg
data/particles/: LICENSE
data/sounds/: todo.txt
data/sounds/ng/: readme.txt
data/sounds/weapons/: chainsaw_readme.txt  readmeFX1.txt
engine/: 3dgui.cpp  client.cpp  command.cpp  console.cpp  decal.cpp  engine.h  engine.h.bak  explosion.h  explosion.h.bak  irc.cpp  lensflare.h  lightning.h  main.cpp  master.cpp  menus.cpp  menus.cpp.bak  movie.cpp  octaedit.cpp  physics.cpp  ragdoll.h  rendergl.cpp  rendermodel.cpp  renderparticles.cpp  rendertext.cpp  server.cpp  serverbrowser.cpp  sound.cpp  textedit.h  texture.cpp  world.cpp  world.h  worldio.cpp
fpsgame/: ai.cpp  ai.h  aiman.h  capture.h  client.cpp  ctf.h  entities.cpp  fps.cpp  game.h  game.h.bak  infection.h  monster.cpp  render.cpp  scoreboard.cpp  server.cpp  server.cpp.bak  survival.h  waypoint.cpp  weapon.cpp  weapons.h
resources/config/: .server.json.kate-swp  core.modules.motd.json  server.json  server.lua
resources/config/config/: core.modules.masterclient.json
resources/lua/: cfgfix.lua  geoip.lua
resources/lua/core/: cubescript.lua  init.lua  task.lua
resources/lua/luvit/: .dns.lua.kate-swp  childprocess.lua  core.lua  dgram.lua  dns.lua  fs.lua  http.lua  https.lua  init.lua  module.lua  net.lua  stack.lua  timer.lua  tls.lua  url.lua  utils.lua  uv.lua
resources/lua/server/: config.lua  handle.lua  init.lua  module.lua  native.lua
scripts/cubescript/critters/: 0.cfg  1.cfg
scripts/lua/: init.lua  luadocument.txt
shared/: command.h  cube.h  ents.h  geom.cpp  geom.h  iengine.h  igame.h  stream.cpp  tools.h  version.h  zip.cpp
src/: CMakeLists.txt  Doxyfile.in  Makefile  changelog.txt
src/CMake/: tig.cmake
src/CMakeModules/: PlatformDetection.cmake  ValidateSource.cmake
src/client/: CMakeLists.txt
src/controller-camera/: CMakeLists.txt  ipc.h  main.cpp
src/docs/: CMakeLists.txt  conf.py.in  index.rst
src/engine/: 3dgui.cpp  animmodel.h  bih.cpp  client.cpp  command.cpp  console.cpp  decal.cpp  engine.h  explosion.h  glare.cpp  grass.cpp  iqm.h  joystick.h  jsonNews.cpp  jsonNews.h  lensflare.h  lightmap.cpp  lightning.h  localserver.cpp  main.cpp  md2.h  md5.h  menus.cpp  movie.cpp  octa.cpp  octaedit.cpp  octarender.cpp  physics.cpp  pvs.cpp  ragdoll.h  rendergl.cpp  rendermodel.cpp  renderparticles.cpp  rendersky.cpp  rendertext.cpp  renderva.cpp  server.cpp  serverbrowser.cpp  shader.cpp  shadowmap.cpp  (+10 more)
src/fpsgame/: ai.cpp  ai.h  aiman.h  auth.cpp  auth.h  bot.cpp  bot.h  campaign.cpp  campaign.h  capture.h  client.cpp  collect.h  ctf.h  entities.cpp  fps.cpp  game.h  gamemode.cpp  infection.h  monster.cpp  movable.cpp  render.cpp  scoreboard.cpp  server.cpp  survival.h  waypoint.cpp  weapon.cpp  weapons.h
src/fpsgame/ai/: ai.cpp  ai.h  aiman.h  bot.cpp  bot.h  monster.cpp  monster.h
src/fpsgame/gamemode/: capture.h  dmsp.h  infection.h  survival.h
src/libraries/enet/: CMakeLists.txt
src/libraries/http-parser/: CMakeLists.txt
src/libraries/luvit/: CMakeLists.txt
src/libraries/luvit/lib/luvit/: buffer.lua  core.lua  dgram.lua  fs.lua  http.lua  https.lua  init.lua  json.lua  module.lua  net.lua  path.lua  repl.lua  timer.lua  tls.lua  utils.lua  uv.lua
src/libraries/luvit/src/: luv.c  luv.h  luv_dns.c  luv_dns.h  luv_misc.c  luvit_init.c  utils.c  utils.h
src/libraries/odbxuv/: CMakeLists.txt  Doxyfile.in
src/libraries/odbxuv/include/odbxuv/: db.h
src/libraries/odbxuv/src/: db.c
src/libraries/odbxuv/test/: db_test.c
src/libraries/tomcrypt/: CMakeLists.txt
src/libraries/tomcrypt/src/headers/: tomcrypt.h  tomcrypt_config.h.cmake
src/libraries/tommath/: CMakeLists.txt
src/libraries/uv/: CMakeLists.txt
src/libraries/uv/src/win/: winapi.h
src/libraries/yajl/: CMakeLists.txt
src/libraries/yajl/src/: yajl_gen.c
src/login/login/: login.sln  login.vcxproj  login.vcxproj.filters  main.cpp  res.h  res.rc
src/luapp/: CMakeLists.txt  luapp.cpp
src/platform_windows/: CMakeLists.txt
src/server/: CMakeLists.txt  lua.cpp  lua.h
src/server/config/: server.json
src/server/lua/core/: module.lua  util.lua
src/server/lua/core/modules/irc/: lua_bot.lua
src/server/lua/core/server/: api.lua  config.lua  init.lua
src/shared/: command.h  command_server.h  config.h.cmake  cube.h  ents.h  geom.cpp  geom.h  iengine.h  igame.h  new.h  rr_version.h.cmake  stream.cpp  tools.cpp  tools.h  version.cpp  version.h  zip.cpp
src/vcpp/: rr.rc  tesseract.cbp  tesseract.depend  tesseract.layout  tesseract.vcxproj  weapons.h
updater/: main.cpp
vcpp/: cube.vcxproj  cube.vcxproj.filters  installer.nsi  mingw.rc  sauerbraten.cbp
(+36 files in other folders)
