add_definitions(-DCLIENT -DBINARY_ARCH=${TIG_TARGET_ARCH} -DBINARY_OS=${TIG_PLATFORM_BIN} -DBINARY_ARCH_STRING="${TIG_TARGET_ARCH}" -DBINARY_OS_STRING="${TIG_PLATFORM_BIN}")

set(LUAPP_SOURCES
	${CMAKE_CURRENT_SOURCE_DIR}/luapp)

tig_add_definitions_for(${TIG_LUAPP_BINARY})

add_executable(${TIG_LUAPP_BINARY} ${LUAPP_SOURCES})
target_link_libraries(${TIG_LUAPP_BINARY}
	${EXTRA_LIBS}
	${UV_LIBRARIES}
	${LUVIT_LIBRARIES}
	${LUAJIT_LIBRARIES}
)

tig_install(${TIG_LUAPP_BINARY})